hphp/hack/test/typecheck/list_array.php.exp
File "list_array.php", line 18, characters 3-19:
Invalid assignment (Typing[4110])
File "list_array.php", line 18, characters 3-14:
Expected list([unresolved], [unresolved]) resulting from a list destructuring assignment of length 2
File "list_array.php", line 17, characters 16-20:
But got varray_or_darray<_>
